--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,9 @@
         </activity>
         <activity
             android:name=".Login"
-            android:label="Login"></activity>
-        <activity android:name=".AdminMail"></activity>
+            android:label="Login">
+        </activity>
+
     </application>
 
 </manifest>
