--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,11 +18,17 @@ android {
     }
 }
 
+repositories {
+    maven { url "https://jitpack.io" }
+}
+
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
     implementation 'com.android.support:design:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile 'com.github.PhilJay:MPAndroidChart:v2.2.4'
     testImplementation 'junit:junit:4.12'
     compile 'com.android.volley:volley:1.1.0'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
